few updates for about us section

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             <li><a href="#service">Services</a></li>
                             <li><a href="#portfolio">Portfolio</a></li>
                             <li><a href="#blog">Blog</a></li>
-                            <li><a href="#contact">Contact</a></li>
+                            <li><a href="#contact">Donate</a></li>
                         </ul>
                     </div>
                     <div class="header__right">
@@ -99,13 +99,10 @@
                 <div class="row align-items-center">
                     <div class="col-lg-6">
                         <div class="hero1">
-                            <h4 class="hero1__subtitle">Hello, I'm</h4>
-                            <h2 class="hero1__title">James Smith</h2>
-                            <p class="hero1__dis1">A Professional UI/UX Designer and Web Developer based In New York</p>
-                            <p class="hero1__dis2">Fashion that exists in everything. Style is a way to say who you <br>
-                                are without having to speak. </p>
-                            <a href="#" class="btn-2">Hire Me</a>
-                            <a href="#" class="btn-2 btn-c">contact</a>
+                            <h2 class="hero1__title">Hope for All</h2>
+                            <p class="hero1__dis1">Empowering Lives Through Education and Support</p>
+                            <p class="hero1__dis2">Lighting the Path to Education, Equality, and Empowerment.</p>
+                            <a href="#" class="btn-2">Donate Now</a>
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -114,13 +111,13 @@
                             <span class="box2"></span>
                             <div class="box3">
                                 <span class="box3__count">10</span>
-                                <span class="box3__years">Years Of <br>
-                                    Success</span>
+                                <span class="box3__years">Years Of<br>
+                                    Together</span>
                             </div>
                             <div class="box3 box4">
                                 <span class="box3__count">600</span>
                                 <span class="box3__years">Projects <br>
-                                    Completed</span>
+                                    Hope</span>
                             </div>
                             <div class="box5">
                                 <img src="assets/img/hero/trophy.png" alt="trophy">
@@ -128,7 +125,6 @@
                             <div class="heroright1__thumb">
                                 <img src="assets/img/hero/with-box.png" alt="main-hero">
                             </div>
-
                         </div>
                     </div>
                 </div>
@@ -137,37 +133,35 @@
         <div class="hero__responsive">
             <div class="container">
                 <div class="responsive_text">
-                    <h4 class="sub-title">Hello, I'm</h4>
-                    <h2 class="title">James Smith</h2>
+                    <h2 class="title">Hope For All</h2>
                 </div>
                 <div class="responsive__thumb">
                     <img src="assets/img/hero/with-box.png" alt="main-hero">
                     <div class="box3 res-box3">
                         <span class="box3__count res__count">10</span>
-                        <span class="box3__years">Years Of <br>
-                            Success</span>
+                        <span class="box3__years">Years Of<br>
+                            Together</span>
                     </div>
                     <div class="box3 box4 res-box4">
                         <span class="box3__count res2__count">600</span>
-                        <span class="box3__years res2__years">Projects <br>
-                            Completed</span>
+                        <span class="box3__years res2__years">Projects of<br>
+                            Completion</span>
                     </div>
                 </div>
-                <p class="hero1__dis1">A Professional UI/UX Designer and Web Developer based In New York</p>
-                <p class="hero1__dis2">Fashion that exists in everything. Style is a way to say who you <br> are without
-                    having to speak. </p>
-                <a href="#" class="btn-2">Hire Me</a>
-                <a href="#" class="btn-2">contact</a>
+                <p class="hero1__dis1">Empowering Lives Through Education and Support</p>
+                <p class="hero1__dis2">Lighting the Path to Education, Equality, and Empowerment.</p>
+                <a href="#contact" class="btn-2">Donate Now</a>
             </div>
         </div>
         <!-- /hero  -->
 
         <!-- service  -->
+        <br>
         <div class="service__area-1" id="service">
             <div class="container">
                 <div class="col-xl-12 text-center">
                     <div class="section__wrapper">
-                        <span class="subtitle">What I Do</span>
+                        <span class="subtitle">What We Do</span>
                         <h2 class="section-title">My Services</h2>
                         <p class="section-dis">Lorem ipsum dolor sit amet consectetur. Nunc luctus malesuada massa at
                             donec diam. Felis nec sit a in sodales. Quis pellentesque nisl laoreet sagittis. Pharetra ac
