working on services

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 </div>
             </div>
         </div>
-        <div class="hero__responsive">
+        <div class="hero__responsive" style="padding: 25px 0px; background-color: var(--navy-1);">
             <div class="container">
                 <div class="responsive_text">
                     <h2 class="title">Hope For All</h2>
@@ -156,16 +156,12 @@
         <!-- /hero  -->
 
         <!-- service  -->
-        <br>
-        <div class="service__area-1" id="service">
+        <div class="service__area-1" id="service" style="padding: 30px 0px;">
             <div class="container">
                 <div class="col-xl-12 text-center">
                     <div class="section__wrapper">
-                        <span class="subtitle">What We Do</span>
-                        <h2 class="section-title">My Services</h2>
-                        <p class="section-dis">Lorem ipsum dolor sit amet consectetur. Nunc luctus malesuada massa at
-                            donec diam. Felis nec sit a in sodales. Quis pellentesque nisl laoreet sagittis. Pharetra ac
-                            aliquet egestas rhoncus aliquam </p>
+                        <h2 class="section-title">About Us</h2>
+                        <p class="section-dis">Hope for all our people to know them we are all together</p>
                     </div>
                 </div>
                 <div class="row">
@@ -176,12 +172,8 @@
                                 <img src="assets/img/service/service-04.png" alt="">
                             </div>
                             <div class="serviceitem__content">
-                                <span class="serviceitem__content__title">Creative Design</span>
-                                <h3 class="serviceitem__content__price">Starts From <span>$49</span></h3>
-                                <p class="serviceitem__content__dis">Lorem ipsum dolor sit amet consectetur. Gravida
-                                    adipiscing sit ullamcorper et penatibus diam. Orci nunc nunc id et at vulputate.
-                                    Purus risus id est vitae rhoncus pellentesque nec at vulputate. Non ornare odio
-                                    ornare ligula netus purus volutpat sit.</p>
+                                <span class="serviceitem__content__title">Empowering Communities</span>
+                                <p class="serviceitem__content__dis">For over a decade, Hope for All has been working to uplift underprivileged children and women by providing the access to education, resources, and equal opportunities for their best and world.</p>
                             </div>
                         </div>
                     </div>
@@ -192,12 +184,8 @@
                                 <img src="assets/img/service/service-02.png" alt="">
                             </div>
                             <div class="serviceitem__content">
-                                <span class="serviceitem__content__title">Creative Design</span>
-                                <h3 class="serviceitem__content__price">Starts From <span>$49</span></h3>
-                                <p class="serviceitem__content__dis">Lorem ipsum dolor sit amet consectetur. Gravida
-                                    adipiscing sit ullamcorper et penatibus diam. Orci nunc nunc id et at vulputate.
-                                    Purus risus id est vitae rhoncus pellentesque nec at vulputate. Non ornare odio
-                                    ornare ligula netus purus volutpat sit.</p>
+                                <span class="serviceitem__content__title">Breaking Barriers</span>
+                                <p class="serviceitem__content__dis">Our mission is to break the cycle of poverty through child education, women’s empowerment, and skill training programs that create sustainable impact within communities.</p>
                             </div>
                         </div>
                     </div>
@@ -208,13 +196,8 @@
                                 <img src="assets/img/service/service-01.png" alt="">
                             </div>
                             <div class="serviceitem__content">
-                                <span class="serviceitem__content__title">UI/UX Design</span>
-                                <h3 class="serviceitem__content__price">Starts From <span>$49</span></h3>
-                                <p class="serviceitem__content__dis">Lorem ipsum dolor sit amet consectetur. Gravida
-                                    adipiscing sit ullamcorper et penatibus diam. Orci nunc nunc id et at vulputate.
-                                    Purus risus id est vitae rhoncus pellentesque nec at vulputate. Non ornare odio
-                                    ornare ligula netus purus volutpat sit.</p>
-                            </div>
+                                <span class="serviceitem__content__title">Inspiring Dreams</span>
+                                <p class="serviceitem__content__dis">We believe that every individual deserves the chance to dream, grow, and build a brighter future, regardless of their background or circumstances to inspiring their dreams.</p>                            </div>
                         </div>
                     </div>
                     <div class="col-md-6">
@@ -224,12 +207,8 @@
                                 <img src="assets/img/service/service-03.png" alt="">
                             </div>
                             <div class="serviceitem__content">
-                                <span class="serviceitem__content__title">Photography</span>
-                                <h3 class="serviceitem__content__price">Starts From <span>$49</span></h3>
-                                <p class="serviceitem__content__dis">Lorem ipsum dolor sit amet consectetur. Gravida
-                                    adipiscing sit ullamcorper et penatibus diam. Orci nunc nunc id et at vulputate.
-                                    Purus risus id est vitae rhoncus pellentesque nec at vulputate. Non ornare odio
-                                    ornare ligula netus purus volutpat sit.</p>
+                                <span class="serviceitem__content__title">Spreading Hope</span>
+                                <p class="serviceitem__content__dis">Through more than 30 successful projects and countless lives touched, we continue our journey of spreading hope and empowering communities with compassion and dedication.</p>
                             </div>
                         </div>
                     </div>
