--- a/index.html
+++ b/index.html
@@ -223,32 +223,32 @@
                 <div class="row counter_row">
                     <div class="col-md-3">
                         <div class="counter">
-                            <span class="counter__volume increase">32 <span>K</span></span>
-                            <h4 class="counter__title">Graphics <br>
-                                Design</h4>
+                            <span class="counter__volume increase">10 <span>+</span></span>
+                            <h4 class="counter__title">Years <br>
+                                Service</h4>
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="counter">
-                            <span class="counter__volume increase">12 <span>K</span></span>
-                            <h4 class="counter__title">Website <br>
-                                Design</h4>
+                            <span class="counter__volume increase">600 </span>
+                            <h4 class="counter__title">Projects <br>
+                                Completed</h4>
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="counter">
-                            <span class="counter__volume increase">1200 <span class="counter__plus"><i
+                            <span class="counter__volume increase">5000 <span class="counter__plus"><i
                                         class="fa-solid fa-plus"></i></span></span>
-                            <h4 class="counter__title">Coffee <br>
-                                Taken</h4>
+                            <h4 class="counter__title">Lives <br>
+                                Impacted</h4>
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="counter">
-                            <span class="counter__volume increase">4200 <span class="counter__plus"><i
+                            <span class="counter__volume increase">200 <span class="counter__plus"><i
                                         class="fa-solid fa-plus"></i></span></span>
-                            <h4 class="counter__title">photo <br>
-                                Taken</h4>
+                            <h4 class="counter__title">Volunteers <br>
+                                Joined</h4>
                         </div>
                     </div>
                 </div>
