page setup done for gallery and about us section

--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
                             <li><a href="#service">Services</a></li>
                             <li><a href="#portfolio">Portfolio</a></li>
                             <li><a href="#blog">Blog</a></li>
-                            <li><a href="#contact">Donate</a></li>
+                            <li><a href="#donate">Donate</a></li>
                         </ul>
                     </div>
                     <div class="header__right">
-                        <a href="#" class="btn-1">Download CV</a>
+                        <a href="#donate" class="btn-1">Donate Now</a>
                     </div>
                 </div>
             </div>
@@ -261,38 +261,31 @@
             <div class="container">
                 <div class="col-xl-12 text-center">
                     <div class="section__wrapper">
-                        <span class="subtitle">Portfolio</span>
-                        <h2 class="section-title">My Amazing Works</h2>
-                        <p class="section-dis">Most common methods for designing websites that work well on desktop is
-                            responsive and adaptive design </p>
+                        <h2 class="section-title">Our Gallery</h2>
+                        <p class="section-dis">Making the world better place.</p>
                     </div>
                 </div>
-                <div class="row">
+                <!-- <div class="row">
                     <div class="col-xl-12">
                         <div class="portfolio__menu text-center mb-50">
                             <button class="active" data-filter="*">Show all</button>
-                            <button data-filter=".cat1">Branding </button>
+                            <button data-filter=".cat1">Built Together </button>
                             <button data-filter=".cat2">Web</button>
-                            <button data-filter=".cat3">Graphics</button>
-                            <button data-filter=".cat4">Digital</button>
-                            <button data-filter=".cat5">Photo</button>
                         </div>
-
                     </div>
-                </div>
+                </div> -->
                 <div class="row grid">
                     <div class="col-xl-4 col-lg-4 col-md-6 grid-item cat1 cat3">
                         <div class="portfolio mb-30 wow animate__animated animate__fadeIn" data-wow-duration=".5s"
                             data-wow-delay=".5s">
                             <div class="portfolio__thumb">
-                                <img src="assets/img/works/1.jpg" alt="">
+                                <img src="assets/img/works/women_4.jpg" alt="">
                                 <a class="popup-image" href="assets/img/portfolio/port1.jpg">
                                     <i class="ti-plus"></i>
                                 </a>
                             </div>
                             <div class="portfolio__text">
-                                <h4><a href="#">Light Mockup</a></h4>
-                                <span>Brnading</span>
+                                <h4><a href="#hero">Help Us To Grow More</a></h4>
                             </div>
                         </div>
                     </div>
@@ -300,14 +293,13 @@
                         <div class="portfolio mb-30 wow animate__animated animate__fadeIn" data-wow-duration=".5s"
                             data-wow-delay=".9s">
                             <div class="portfolio__thumb">
-                                <img src="assets/img/works/2.jpg" alt="">
+                                <img src="assets/img/works/women_3.jpg" alt="">
                                 <a class="popup-image" href="assets/img/portfolio/port2.jpg">
                                     <i class="ti-plus"></i>
                                 </a>
                             </div>
                             <div class="portfolio__text">
-                                <h4><a href="#">Light Mockup</a></h4>
-                                <span>Brnading</span>
+                                <h4><a href="#hero">Help Us To Grow More</a></h4>
                             </div>
                         </div>
                     </div>
@@ -315,14 +307,13 @@
                         <div class="portfolio mb-30 wow animate__animated animate__fadeIn" data-wow-duration=".5s"
                             data-wow-delay="1.3s">
                             <div class="portfolio__thumb">
-                                <img src="assets/img/works/3.jpg" alt="">
+                                <img src="assets/img/works/women_2.jpg" alt="">
                                 <a class="popup-image" href="assets/img/portfolio/port3.jpg">
                                     <i class="ti-plus"></i>
                                 </a>
                             </div>
                             <div class="portfolio__text">
-                                <h4><a href="#">Light Mockup</a></h4>
-                                <span>Brnading</span>
+                                <h4><a href="#hero">Help Us To Grow More</a></h4>
                             </div>
                         </div>
                     </div>
@@ -330,14 +321,13 @@
                         <div class="portfolio mb-30 wow animate__animated animate__fadeIn" data-wow-duration=".5s"
                             data-wow-delay="1.6s">
                             <div class="portfolio__thumb">
-                                <img src="assets/img/works/5.jpg" alt="">
+                                <img src="assets/img/works/women_1.jpg" alt="">
                                 <a class="popup-image" href="assets/img/portfolio/port4.jpg">
                                     <i class="ti-plus"></i>
                                 </a>
                             </div>
                             <div class="portfolio__text">
-                                <h4><a href="#">Light Mockup</a></h4>
-                                <span>Brnading</span>
+                                <h4><a href="#hero">Help Us To Grow More</a></h4>
                             </div>
                         </div>
                     </div>
@@ -345,14 +335,13 @@
                         <div class="portfolio mb-30 wow animate__animated animate__fadeIn" data-wow-duration=".5s"
                             data-wow-delay="1.9s">
                             <div class="portfolio__thumb">
-                                <img src="assets/img/works/4.jpg" alt="">
+                                <img src="assets/img/works/children_2.jpg" alt="">
                                 <a class="popup-image" href="assets/img/portfolio/port5.jpg">
                                     <i class="ti-plus"></i>
                                 </a>
                             </div>
                             <div class="portfolio__text">
-                                <h4><a href="#">Light Mockup</a></h4>
-                                <span>Brnading</span>
+                                <h4><a href="#hero">Help Us To Grow More</a></h4>
                             </div>
                         </div>
                     </div>
@@ -360,14 +349,13 @@
                         <div class="portfolio mb-30 wow animate__animated animate__fadeIn" data-wow-duration=".5s"
                             data-wow-delay="2.5s">
                             <div class="portfolio__thumb">
-                                <img src="assets/img/works/6.jpg" alt="">
+                                <img src="assets/img/works/children_1.jpg" alt="">
                                 <a class="popup-image" href="assets/img/portfolio/port7.jpg">
                                     <i class="ti-plus"></i>
                                 </a>
                             </div>
                             <div class="portfolio__text">
-                                <h4><a href="#">Light Mockup</a></h4>
-                                <span>Brnading</span>
+                                <h4><a href="#hero">Help Us To Grow More</a></h4>
                             </div>
                         </div>
                     </div>
@@ -376,80 +364,13 @@
         </div>
         <!-- /portfolio -->
 
-        <!-- service  -->
-        <div class="service__area-2">
-            <div class="container">
-                <div class="col-xl-12 text-center">
-                    <div class="section__wrapper">
-                        <span class="subtitle">Service</span>
-                        <h2 class="section-title">My Provided Service</h2>
-                        <p class="section-dis">Most common methods for designing websites that work well on desktop is
-                            responsive and adaptive design</p>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-6 col-lg-4 col-xl-3">
-                        <div class="serviceitem2">
-                            <div class="serviceitem2__thumb">
-                                <img src="assets/img/service/s1.png" alt="">
-                            </div>
-                            <div class="serviceitem2__content">
-                                <span class="serviceitem2__content__title">Unique Design</span>
-                                <p class="serviceitem2__content__dis">Most common methods for designing websites that
-                                    work well on desktop is responsive and </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-4 col-xl-3">
-                        <div class="serviceitem2">
-                            <div class="serviceitem2__thumb">
-                                <img src="assets/img/service/s2.png" alt="">
-                            </div>
-                            <div class="serviceitem2__content">
-                                <span class="serviceitem2__content__title">Responsive</span>
-                                <p class="serviceitem2__content__dis">Most common methods for designing websites that
-                                    work well on desktop is responsive and </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-4 col-xl-3">
-                        <div class="serviceitem2">
-                            <div class="serviceitem2__thumb">
-                                <img src="assets/img/service/s3.png" alt="">
-                            </div>
-                            <div class="serviceitem2__content">
-                                <span class="serviceitem2__content__title">Bootstrap Made</span>
-                                <p class="serviceitem2__content__dis">Most common methods for designing websites that
-                                    work well on desktop is responsive and </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-4 col-xl-3">
-                        <div class="serviceitem2">
-                            <div class="serviceitem2__thumb">
-                                <img src="assets/img/service/s4.png" alt="">
-                            </div>
-                            <div class="serviceitem2__content">
-                                <span class="serviceitem2__content__title">24 Hours Support</span>
-                                <p class="serviceitem2__content__dis">Most common methods for designing websites that
-                                    work well on desktop is responsive and </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- /service  -->
-
         <!-- blog  -->
         <div class="blog__area-1" id="blog">
             <div class="container">
                 <div class="col-xl-12 text-center">
                     <div class="section__wrapper">
-                        <span class="subtitle">Latest News</span>
-                        <h2 class="section-title">Checkout My Recent Blogs</h2>
-                        <p class="section-dis">Most common methods for designing websites that work well on desktop is
-                            responsive and adaptive design</p>
+                        <h2 class="section-title">Our Amazing Works</h2>
+                        <p class="section-dis">Every day we bring to millions of children in the worlds hardest places as a sign of God's unconditional love</p>
                     </div>
                 </div>
                 <div class="row">
@@ -465,7 +386,7 @@
                                 <p>Lorem ipsum dolor sit amet consectetur. At cursus sed felis cursus augue augue a.
                                     Aliquet mauris mauris nunc odio morbi amet. Eget consectetur bibendum libero sit
                                     pretium.</p>
-                                <a href="#" class="btn-4">read more <i class="fa-solid fa-angles-right"></i></a>
+                                <!-- <a href="#" class="btn-4">read more <i class="fa-solid fa-angles-right"></i></a> -->
                             </div>
                         </div>
                     </div>
@@ -481,7 +402,7 @@
                                 <p>Lorem ipsum dolor sit amet consectetur. At cursus sed felis cursus augue augue a.
                                     Aliquet mauris mauris nunc odio morbi amet. Eget consectetur bibendum libero sit
                                     pretium.</p>
-                                <a href="#" class="btn-4">read more <i class="fa-solid fa-angles-right"></i></a>
+                                <!-- <a href="#" class="btn-4">read more <i class="fa-solid fa-angles-right"></i></a> -->
                             </div>
                         </div>
                     </div>
@@ -497,7 +418,7 @@
                                 <p>Lorem ipsum dolor sit amet consectetur. At cursus sed felis cursus augue augue a.
                                     Aliquet mauris mauris nunc odio morbi amet. Eget consectetur bibendum libero sit
                                     pretium.</p>
-                                <a href="#" class="btn-4">read more <i class="fa-solid fa-angles-right"></i></a>
+                                <!-- <a href="#" class="btn-4">read more <i class="fa-solid fa-angles-right"></i></a> -->
                             </div>
                         </div>
                     </div>
@@ -512,9 +433,8 @@
             <div class="container">
                 <div class="col-xl-12 text-center">
                     <div class="section__wrapper">
-                        <h2 class="section-title text-white">Contact With Me</h2>
-                        <p class="section-dis text-white">Most common methods for designing websites that work well on
-                            desktop is responsive and adaptive design</p>
+                        <h2 class="section-title text-white">Get Involved With Us</h2>
+                        <p class="section-dis text-white">Donate here to make this building brighter futures together, We will heal the world.</p>
                     </div>
                 </div>
                 <div class="row">
